[project]
name = "pj"
version = "0.1.0"
description = "A tiny project & dependency manager to take with you"
readme = "README.md"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Nikita Karamov", email = "me@kytta.dev"},
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
]

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.pdm]
distribution = true
